Shopnow-yaml/shopnow-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopnow-api-gateway
  name: shopnow-api-gateway-deployment
  namespace: shopnow
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: shopnow-api-gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shopnow-api-gateway
    spec:
      containers:
        # SỬA 4: Đổi Image về Harbor của bạn
        - image: harbor.kihpn.online/shopnow/api-gateway:v1
          imagePullPolicy: Always
          name: shopnow-api-gateway
          ports:
            - containerPort: 5860 # Đã sửa lại khớp với server.port ở trên (5860)
              name: tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /app/src/main/resources/application.properties
              name: shopnow-api-gateway-application-properties-config-volume
              subPath: application.properties
      imagePullSecrets:
      - name: shopnow-registry-secret
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - configMap:
            defaultMode: 420
            name: shopnow-api-gateway-application-properties-configmap
          name: shopnow-api-gateway-application-properties-config-volume
---
apiVersion: v1
kind: Service
metadata:
  name: shopnow-api-gateway-service
  namespace: shopnow
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 80 # SỬA 5: Ép về Port 80 để Load Balancer Nginx bên ngoài gọi vào
      protocol: TCP
      targetPort: 5860
  selector:
    app: shopnow-api-gateway
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopnow-api-gateway-ingress
  namespace: shopnow
spec:
  ingressClassName: nginx
  rules:
    # SỬA 6: Đổi host về tên miền của bạn
    - host: api-shopnow.kihpn.online
      http:
        paths:
          - backend:
              service:
                name: shopnow-api-gateway-service
                port:
                  number: 80
            path: /
            pathType: Prefix
