Shopnow-yaml/shopnow-discovery-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopnow-discovery-server
  name: shopnow-discovery-server-deployment
  namespace: shopnow
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: shopnow-discovery-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shopnow-discovery-server
    spec:
      containers:
        # SỬA LẦN 1: Trỏ đúng vào kho Harbor của bạn
        - image: harbor.kihpn.online/shopnow/discovery-server:v1 
          imagePullPolicy: Always
          name: shopnow-discovery-server
          ports:
            - containerPort: 8761
              name: tcp
              protocol: TCP
          volumeMounts:
            # SỬA LẦN 2: Đổi đường dẫn mount cho khớp với chuẩn Spring Boot
            - mountPath: /app/src/main/resources/application.properties 
              name: shopnow-discovery-server-application-properties-config-volume
              subPath: application.properties
      imagePullSecrets:
      - name: shopnow-registry-secret
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - configMap:
            defaultMode: 420
            name: shopnow-discovery-server-application-properties-configmap
          name: shopnow-discovery-server-application-properties-config-volume
---
apiVersion: v1
kind: Service
metadata:
  name: shopnow-discovery-server-service
  namespace: shopnow
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 80            # SỬA LẦN 3: Ép Service về Port 80 theo chuẩn kiến trúc
      protocol: TCP
      targetPort: 8761    # Vẫn nhét data vào mồm Container ở cổng 8761
  selector:
    app: shopnow-discovery-server
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopnow-discovery-server-ingress
  namespace: shopnow
spec:
  ingressClassName: nginx
  rules:
    # SỬA LẦN 4: Trỏ về đúng tên miền Windows của bạn
    - host: discovery-server-shopnow.kihpn.online 
      http:
        paths:
          - backend:
              service:
                name: shopnow-discovery-server-service
                port:
                  number: 80 # Khớp với cổng 80 của Service ở trên
            path: /
            pathType: Prefix
