Shopnow-yaml/shopnow-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopnow-frontend
  name: shopnow-frontend-deployment
  namespace: shopnow
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: shopnow-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shopnow-frontend
      # Đã xóa dòng namespace: shopnow-frontend ở đây vì nó thừa thãi và dễ gây lỗi
    spec:
      containers:
        # SỬA LẦN 1: Đổi URL Harbor sang tên miền của bạn và khớp tên image bạn vừa build
        - image: harbor.kihpn.online/shopnow/frontend:v1 
          imagePullPolicy: Always
          name: shopnow-frontend
          ports:
            - containerPort: 80
              name: tcp
              protocol: TCP
      imagePullSecrets:
      - name: shopnow-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: shopnow-frontend-service
  namespace: shopnow
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 80 # LÚC NÀY THÌ TARGET PORT 80 LÀ CHUẨN XỊN RỒI NHÉ!
  selector:
    app: shopnow-frontend
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopnow-frontend-ingress
  namespace: shopnow
spec:
  ingressClassName: nginx
  rules:
    # SỬA LẦN 2: Đổi tên miền Ingress về tên miền thật của bạn
    - host: shopnow.kihpn.online 
      http:
        paths:
          - backend:
              service:
                name: shopnow-frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
